Fix #239 - spacing of main menu in webtrees theme

--- a/themes/webtrees/css-1.5.4/style.css
+++ b/themes/webtrees/css-1.5.4/style.css
@@ -2174,8 +2174,9 @@ div.faq_body {
 #main-menu > li {
 	background-image: url(images/large_menu_sprite.png);
 	background-repeat: no-repeat;
-	width: 110px;
+	min-width: 80px;
 	height: 64px;
+	padding: 0 5px;
 	text-align: center;
 }
 
